automatic project update for v9.4.0